Issue #21802: The reader in BufferedRWPair now is closed even when closing writer failed in BufferedRWPair.close().